[package]
name = "mock-bitlight"
version.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bp-wallet = { path = "../../", features = ["fs"] }
tokio = "1.39.2"
opendal = "0.49.0"
