[package]
name = "mock-bitlight"
version.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bp-wallet = { path = "../../", features = ["all"] }
bp-std = "0.11.0-beta.6"
tokio = { version = "1.39.2", features = ["full"] }
opendal = { version = "0.48.0", features = ["services-s3", "services-fs"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.9.1"
toml = "0.8.2"
